fix method update profile post -> patch in apidoc

--- a/public/api.html
+++ b/public/api.html
@@ -36,7 +36,7 @@
     <h2>PROFILE</h2>
     <li>[GET] /users/profile</li>
     Chỉ cần login thành công và gọi tới là lấy được profile của user.
-    <li>[POST] /users/profile</li>
+    <li>[PATCH] /users/profile</li>
     Đây là cập nhật thông tin profile.
     Lưu ý cần truyền vào các thuộc tính giống với thông tin trong DB của bảng User.
     Và đóng gọi lại một biến có tên là newProfile = {... thuộc tính cần thay đổi}.
