fix vnpay, apidoc

--- a/public/api.html
+++ b/public/api.html
@@ -54,9 +54,10 @@
     <li>[POST] /payment/queryOrder</li>
     Đây là dùng để query trạng thái đơn hàng đã được thanh toán chưa. Cần truyền vô {"app_trans_id": "mã đơn hàng "}.
     <h3>VN PAY</h3>
-    <li>[POST] /payment/vnpay</li>
-    Chỉ cần gọi để test và không cần truyền gì vô. Sẽ update doc này để hướng dẫn sử dụng khi hoàn thiện toàn bộ.
-    Khi gọi tới server thì server sẽ trả về url và mình mở link đó trên trình duyệt.
+    <li>[POST] /payment/create_payment_url</li>
+    có thể truyền vô thông tin như sau nếu muốn: {"amount": 100011, "description": {"orderId": "123asd","userId" : "82hdhcmnhawie1"}}
+    <b>description:</b> đây là thông tin cần để lưu lại là người dùng đã mua thành công trong database. Sẽ cần thảo luận lại sau. Trước mắt thì
+    không cần truyền cũng chả sao.
     Chọn ngân hàng nội quốc và thông tin thẻ như sau:
     <table>
         <tr>
@@ -80,7 +81,10 @@
             <td>123456</td>
         </tr>
     </table>
-
+    Thanh toán thành công thì sẽ được redirect đến localhost:3000/payment/vnpay?rs=success
+    Thất bại thì  localhost:3000/payment/vnpay?rs=failed
+    Bên web chú ý tạo thêm router để nhận và hiển thị hoặc thông báo nhé.
+    Mobile: Có lẻ cần nghiên cứu thêm, cơ chế khác nhau.
     <h2>FEATURE</h2>
     <li>[GET] /features</li>
     Lấy được hết tất cả những tính năng
