update createPurchasePackage (set purchaseDate, calculate expirationDate)

--- a/public/api.html
+++ b/public/api.html
@@ -161,7 +161,7 @@
     <li>[POST] /purchase</li>
     Khi mua gói dịch vụ thành công (thanh toán rồi) thì ta sẽ gọi để thêm vào bảng purchase cho biết
     user này đã mua được các gói dịch vụ nào.
-    Các fields cần truyền vào bao gồm: packageId, purchaseDate(ngày mua), expirationDate(ngày hết hạn), total
+    Các fields cần truyền vào bao gồm: packageId, month(số tháng), total(tổng tiền).
     Cái price trong gói dịch vụ ban đầu là tiền trong 1 tháng. Tổng tiền (total) ở đây là tiền/tháng * số tháng
     <h2></h2>
     <h2></h2>
