add appointment entitie

--- a/public/api.html
+++ b/public/api.html
@@ -13,7 +13,7 @@
     <li>[POST] /auth/refresh</li>
     Cần truyền refreshToken vô bằng cookies - web or body - mobile để nhận lại token mới.
     <li>[POST] /auth/logout</li>
-    Theo như lúc đầu code thì cần truyền vô user_id vài body. Có thể thay đổi nhưng không cần thiết.
+    Không cần truyền gì hết, trực tiếp logout.
     <li>[POST] /auth/register</li>
     Đăng kí tài khoản bằng username và password. Cần truyền vô username, password, fullname. Cần truyền vô body.
     <li>[POST] /auth/login</li>
