--- a/public/api.html
+++ b/public/api.html
@@ -168,19 +168,32 @@
     <li>[POST] /appointment/get-appoint-user</li>
     không truyền = get all.
     truyền vô id = get theo id.
+    truyền vô status: number = get theo status
     <li>[PATCH] /appointment/update-one-user</li>
-    truyền vô id, và thông tin cần update như description, date: 2024-01-28. Không thể update accepted.
+    truyền vô id, và thông tin cần update như description, Không thể update status và date.
     <li>[DELETE] /appointment/delete-appoint-user</li>
+    <div>
+        <b>Lưu ý: phương thức delete có đặc thù là bỏ hết vô biến data thì mới truyền bằng body được.</b>
+    </div>
     không truyền gì: xóa tất cả.
 	truyền vô id: xóa lịch hẹn theo id đó.
+    <div>
+        <b>status: 0 - chưa chấp nhận | </b>
+        <b>status: 1 - đã được chấp nhận| </b>
+        <b>status: 2 - bị salon từ chối gặp</b>
+    </div>
+
 
     <h3>Salon admin: cần đăng nhập thành công và là admin của group đó. Luôn phải truyền vào salonId.</h3>
     <li>[POST] /appointment/get-appoint-admin</li>
     Không truyền thêm = lấy tất cả cuộc hẹn.
 	Truyền thêm id = lấy cuộc hẹn có id đó.
     <li>[PATCH] /appointment/update-one-admin</li>
-    cần truyền thêm id của cuộc hẹn. Không thể update description. Có thể update date: nam-thang-ngay, accepted: true/false.
+    cần truyền thêm id của cuộc hẹn. Chỉ có thể update status: 1 2. bên fe sẽ xử lý tùy theo yêu cầu mà truyền vô.
     <li>[DELETE] /appointment/delete-appoint-admin</li>
+    <div>
+        <b>Lưu ý: phương thức delete có đặc thù là bỏ hết vô biến data thì mới truyền bằng body được.</b>
+    </div>
     không truyền gì thêm: xóa hết.
 	truyền thêm id: xóa cuộc hẹn đó.
 
