socket for notification

--- a/public/api.html
+++ b/public/api.html
@@ -245,7 +245,8 @@
     </div>
     không truyền gì thêm: xóa hết.
 	truyền thêm id: xóa cuộc hẹn đó.
-    <b>Socket sẽ được thêm vào sau.</b> 
+    <b>Socket: </b> 
+    Bên client cần lắng nghe (.io) sự kiện "notification" được gửi từ server.
     <h2></h2>
     <h2></h2>
 </body>
