--- a/public/api.html
+++ b/public/api.html
@@ -228,6 +228,8 @@
     <li>[POST] /notification/get-notification-user</li>
     không truyền = get all.
     truyền vô id = get theo id.
+    <li>[PATCH] /notification/read-notification-user</li>
+    chỉ cần truyền vào id của thông báo đó.
     <li>[DELETE] /notification/delete-notification-user</li>
     <div>
         <b>Lưu ý: phương thức delete có đặc thù là bỏ hết vô biến data thì mới truyền bằng body được.</b>
@@ -239,6 +241,8 @@
     <li>[POST] /notification/get-notification-admin</li>
     Không truyền thêm = lấy tất cả cuộc hẹn.
 	Truyền thêm id = lấy cuộc hẹn có id đó.
+    <li>[PATCH] /notification/read-notification-admin</li>
+    chỉ cần truyền thêm vào id của thông báo đó.
     <li>[DELETE] /notification/delete-appoint-admin</li>
     <div>
         <b>Lưu ý: phương thức delete có đặc thù là bỏ hết vô biến data thì mới truyền bằng body được.</b>
