get token videocall zegocloud

--- a/public/api.html
+++ b/public/api.html
@@ -318,6 +318,9 @@
     <li>[POST] /videocall/validate-meeting/:meetingId</li>
     cần truyền vô token bằng body và meetingId ở params.
     <b>Url client cần thiết lập là: http://localhost:5000/videocall/</b>
+    <h3>ZegoCloud</h3>
+    <li>[POST] /videocall/get-token-zegocloud</li>
+    Dùng để nhận token. Yêu cần phải đăng nhập.
     
     <h2> Phân quyền</h2>
     <li>[POST] /salons/user</li>
