add select field conversation_status in getChattingUsers, add socket listen event answerCallVideo, refuseCallVideo, endCallVideo

--- a/public/api.html
+++ b/public/api.html
@@ -234,11 +234,13 @@
             {
                 "id": "d44bedce-4033-4831-b172-ac8fccfa627b",
                 "name": "nguyentest2",
+                "username": "nguyentest1",
                 "image": "https://avatar.iran.liara.run/username?username=nguyentest1",
                 "message": {
-                    "sender": "",
-                    "message": "Xin chao Salon 5:43",
-                    "time": "17:43"
+                    "sender": "Bạn",
+                    "message": "Xin chao ban",
+                    "time": "19:18",
+                    "conversation_status": true
                 }
             },
             {
@@ -247,8 +249,9 @@
                 "image": "https://res.cloudinary.com/dok6ou3xz/image/upload/v1710493365/salon-car/fqptwtyxpniglnsmhyby.jpg",
                 "message": {
                     "sender": "Bạn",
-                    "message": "Toi hoi xe lamborghini",
-                    "time": "17:18"
+                    "message": "Toi hoi xe lamboghini",
+                    "time": "17:18",
+                    "conversation_status": false
                 }
             }
         ]
